<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pasquierase</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenu">BIENVENU CHEZ L\'ENTRAINEUR INFORMATIQUE VERSION 1.0</string>
    <string name="copyright">assambapasquier@yahoo.fr</string>
    <string name="nouvellepartie">COMMENCER UNE PARTIE</string>
    <string name="aide">COMMENT JOUER?</string>
    <string name="apropos">A PROPOS DU JEU</string>
    <string name="quitter">QUITTER LE JEU</string>
    
</resources>
